fix cuda dependency